--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -2,7 +2,7 @@
   <div class="header-container">
     <div class="container header-flex">
       <div class="brand-logo-link">
-        <a href="../pages/index.html">
+        <a href="index.html">
           <img
             src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
             alt="商品商標"
@@ -13,7 +13,7 @@
       <ul class="header-list">
         <li class="header-list-item"><a href="#">系列鏡框</a></li>
         <li class="header-list-item">
-          <a href="../pages/store-location.html">門市據點</a>
+          <a href="store-location.html">門市據點</a>
         </li>
         <li class="header-list-item"><a href="#">部落格</a></li>
         <li class="header-list-item"><a href="#">常見問題</a></li>
