地點詳細頁

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -4,5 +4,7 @@
 @import "./mixin";
 
 @import "./layout/header.scss";
+@import "./layout/store-location-header.scss";
 @import "./pages/store-location";
+@import "./pages/location-page";
 @import "./layout/footer.scss";
