--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -10,11 +10,11 @@
           <li class="footer-list-item"><a href="#">常見問題</a></li>
         </ul>
         <div class="phone-number">
-          <i class="fa-solid fa-phone phone-icon"></i>
+          <span class="material-symbols-outlined white-color">call</span>
           <a href="tel:+0800-000-000" class="fz-setting">0800-000-000</a>
         </div>
         <div class="email">
-          <i class="fa-regular fa-envelope email-icon"></i>
+          <span class="material-symbols-outlined white-color"> mail </span>
           <a href="mailto:glasses@business.com" class="fz-setting"
             >glasses@business.com</a
           >
